# mercury

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  test.cpp
.claude/: settings.local.json
benchmarks/: LegacyHashMap.h  LegacyMatchingEngine.h  LegacyOrderBook.h  benchmark_main.cpp
data/: sample_orders.csv  sample_orders_with_clients.csv
docs/: ARCHITECTURE.md  BACKTESTING.md  PROFILING.md  STRATEGIES.md  WORKFLOWS.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: backtest-results-viewer.tsx  mid-price-chart.tsx  order-book-ladder.tsx  order-entry-form.tsx  pnl-card.tsx  simulation-controls.tsx  stats-strip.tsx  status-bar.tsx  system-health.tsx  top-bar.tsx  trade-tape.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx
frontend/src/hooks/: use-market-data-websocket.ts
frontend/src/lib/: format.ts  types.ts
frontend/src/store/: market-data-store.test.ts  market-data-store.ts
include/: AsyncWriter.h  BacktestDemo.h  BacktestReport.h  BacktestRunner.h  Backtester.h  BenchTiming.h  BinaryProtocol.h  CSVParser.h  ConcurrentMatchingEngine.h  EngineService.h  HashMap.h  InstrumentBook.h  IntrusiveList.h  MarketData.h  MarketDataPublisher.h  MarketMakingStrategy.h  MarketRuntime.h  MatchingEngine.h  MomentumStrategy.h  ObjectPool.h  Order.h  OrderBook.h  OrderEntryGateway.h  OrderNode.h  PnLTracker.h  PriceLevel.h  Profiler.h  RegimeManager.h  RiskManager.h  ServerApp.h  ServerHelpers.h  Strategy.h  StrategyDemo.h  StrategyManager.h  ThreadPool.h  TradeWriter.h
scenarios/: calm-two-sided-market.json  high-cancel-rate.json  momentum-burst.json  thin-book-stress.json  toxic-flow.json
src/: BacktestRunner.cpp  CSVParser.cpp  EngineService.cpp  MarketDataPublisher.cpp  MarketRuntime.cpp  MatchingEngine.cpp  Order.h  OrderBook.cpp  OrderBook.h  OrderEntryGateway.cpp  PnLTracker.cpp  RegimeManager.cpp  RiskManager.cpp  ServerApp.cpp  TradeWriter.cpp  main.cpp
tests/: backtest_report_test.cpp  concurrency_test.cpp  data_structures_test.cpp  market_data_test.cpp  matching_engine_test.cpp  my_test.cpp  order_book_test.cpp  order_validation_test.cpp  pnl_tracker_test.cpp  regime_manager_test.cpp  risk_manager_test.cpp  server_api_contract_test.cpp  simulation_runtime_test.cpp  strategy_test.cpp  stress_test.cpp
